--- a/assignment/src/App.css
+++ b/assignment/src/App.css
@@ -4,6 +4,6 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background: grey;
+    /* background: grey; */
     font-family: Arial, sans-serif;
 }
