--- a/assignment/src/components/homepage/homepage.css
+++ b/assignment/src/components/homepage/homepage.css
@@ -1,8 +1,9 @@
 .homepage {
     display: flex;
-    /* flex-direction: column; */
-    /* align-items: center; */
-    /* justify-content:center; */
+    /* flex-direction: column;
+    align-items: center;
+    justify-content:center; */
+    margin-left: 10px;
     width: 100%;
     height: 100%;
     border-radius: 20px;
@@ -12,7 +13,7 @@
 }
 
 .homepage > .button {
-    justify-content: right;
+    margin-left: 100px;
     width: 70px;
     height: 20px;
     background: #1877f2;
@@ -20,7 +21,7 @@
     color: #fff;
     font-size: 1.25rem;
     padding: 0.5rem;
-    /* margin: 0.5rem 0; */
+    margin-top: 5px;
     border-radius: 8px;
     outline: none;
     cursor: pointer;
