--- a/assignment/src/App.css
+++ b/assignment/src/App.css
@@ -1,9 +1,8 @@
-.App{
+/* .App{
     display: flex;
     width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
-    /* background: grey; */
     font-family: Arial, sans-serif;
-}
+} */
