--- a/assignment/src/components/homepage/homepage.css
+++ b/assignment/src/components/homepage/homepage.css
@@ -1,28 +1,12 @@
 .homepage {
     display: flex;
-    /* flex-direction: column;
-    align-items: center;
-    justify-content:center; */
     margin-left: 10px;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    box-shadow: 0 0 15px 5px grey;
     background:skyblue;
-    position: relative;
 }
 
-.homepage > .button {
-    margin-left: 100px;
-    width: 70px;
-    height: 20px;
-    background: #1877f2;
-    border: 1px solid #1877f2;
-    color: #fff;
-    font-size: 1.25rem;
-    padding: 0.5rem;
+.btn{
     margin-top: 5px;
-    border-radius: 8px;
-    outline: none;
-    cursor: pointer;
+    height: 40px;
+    width: 90px;
+    margin-right: 20px;
 }
