--- a/assignment/src/components/register/register.css
+++ b/assignment/src/components/register/register.css
@@ -1,4 +1,8 @@
+*{
+    margin: auto;
+}
 .register {
+    margin: auto;
     width: 400px;
     background: #fff;
     border: 1px solid #dddfe2;
@@ -7,6 +11,7 @@
     padding: 1rem;
     align-items: center;
     text-align: center;
+    margin-top: 100px;
 }
 
 .register > input {
